# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
brain_games/: brain_game_even.py  cli.py  common_games_operations.py  games_engine.py
brain_games/games/: brain_game_calc.py  brain_game_even.py  brain_game_gcd.py  brain_game_prime.py  brain_game_progression.py  common_games_operations.py  games_settings.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
