[project]
name = "hexlet-code"
version = "0.1.0"
description = "Provides some cool games to play in console."
readme = "README.md"
authors = [
    {name = "Petr Malafeev", email = "malafeevpa@yandex.ru"},
]
keywords = ["games", "console", "brain-games"]
classifiers = [
    "Topic :: Games/Entertainment",
    "Environment :: Console",
    "Programming Language :: Python"
]
requires-python = ">=3.8.1"
dependencies = [
    "prompt>=0.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[project.urls]
repository = "https://github.com/Pythonusus/python-project-49"

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]
